--- a/build.gradle
+++ b/build.gradle
@@ -23,17 +23,17 @@ subprojects {
 }
 
 dependencies {
-    compileOnly 'ink.ptms.core:v11801:11801:mapped'
+    //compileOnly 'ink.ptms.core:v11801:11801:mapped'
     compileOnly 'ink.ptms.core:v11801:11801:universal'
     compileOnly 'ink.ptms.core:v11701:11701:universal'
-    compileOnly 'ink.ptms.core:v11605:11605'
-    compileOnly 'ink.ptms.core:v11500:11500'
-    compileOnly 'ink.ptms.core:v11400:11400'
-    compileOnly 'ink.ptms.core:v11300:11300'
-    compileOnly 'ink.ptms.core:v11200:11200'
-    compileOnly 'ink.ptms.core:v11100:11100'
-    compileOnly 'ink.ptms.core:v11000:11000'
-    compileOnly 'ink.ptms.core:v10900:10900'
+    //compileOnly 'ink.ptms.core:v11605:11605'
+    //compileOnly 'ink.ptms.core:v11500:11500'
+    //compileOnly 'ink.ptms.core:v11400:11400'
+    //compileOnly 'ink.ptms.core:v11300:11300'
+    //compileOnly 'ink.ptms.core:v11200:11200'
+    //compileOnly 'ink.ptms.core:v11100:11100'
+    //compileOnly 'ink.ptms.core:v11000:11000'
+    //compileOnly 'ink.ptms.core:v10900:10900'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
