--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,10 @@ plugins {
 
 allprojects {
     repositories {
-        maven { url 'https://repo2s.ptms.ink/repository/maven-releases/' }
+        maven {
+            url 'http://ptms.ink:8081/repository/releases/'
+            allowInsecureProtocol true
+        }
         mavenCentral()
     }
 }
@@ -23,8 +26,8 @@ subprojects {
 }
 
 dependencies {
-    //compileOnly 'ink.ptms.core:v11801:11801:mapped'
-    compileOnly 'ink.ptms.core:v11801:11801:universal'
+    //compileOnly 'ink.ptms.core:v11802:11802:mapped'
+    compileOnly 'ink.ptms.core:v11802:11802:universal'
     compileOnly 'ink.ptms.core:v11701:11701:universal'
     //compileOnly 'ink.ptms.core:v11605:11605'
     //compileOnly 'ink.ptms.core:v11500:11500'
