--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
-plugins {
-    id 'java'
-}
-
 allprojects {
+    apply plugin: 'java'
+    apply plugin: 'maven-publish'
+
     repositories {
         maven {
             url 'http://ptms.ink:8081/repository/releases/'
@@ -10,18 +9,32 @@ allprojects {
         }
         mavenCentral()
     }
-}
-
-subprojects {
-    apply plugin: 'java'
-
-    dependencies {
-        implementation rootProject
-    }
 
     compileJava {
         options.release = 11
         options.encoding = 'UTF-8'
+    }
+
+    java {
+        withSourcesJar()
+        withJavadocJar()
+    }
+
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                groupId project.group
+                artifactId project.name
+                version project.version
+                from components.java
+            }
+        }
+    }
+}
+
+subprojects {
+    dependencies {
+        implementation rootProject
     }
 }
 
@@ -40,11 +53,6 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-}
-
-compileJava {
-    options.release = 11
-    options.encoding = 'UTF-8'
 }
 
 test {
