--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,9 @@ subprojects {
 }
 
 dependencies {
+    compileOnly 'ink.ptms.core:v11900:11900:universal'
     //compileOnly 'ink.ptms.core:v11802:11802:mapped'
-    compileOnly 'ink.ptms.core:v11802:11802:universal'
+    //compileOnly 'ink.ptms.core:v11802:11802:universal'
     compileOnly 'ink.ptms.core:v11701:11701:universal'
     //compileOnly 'ink.ptms.core:v11605:11605'
     //compileOnly 'ink.ptms.core:v11500:11500'
