--- a/rtag-plugin/build.gradle
+++ b/rtag-plugin/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     implementation project(':rtag-entity')
     implementation project(':rtag-item')
 
-    compileOnly 'ink.ptms.core:v11800:11800:api'
+    compileOnly 'org.spigotmc:spigot-api:1.19.3-R0.1-SNAPSHOT'
 }
 
 jar.dependsOn (shadowJar)
