--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ allprojects {
         mavenCentral()
     }
 
+    dependencies {
+        compileOnly 'org.jetbrains:annotations:24.1.0'
+    }
+
     compileJava {
         options.release = 11
         options.encoding = 'UTF-8'
@@ -45,7 +49,7 @@ subprojects {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.20.3-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
