--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,24 @@
 allprojects {
     apply plugin: 'java'
     apply plugin: 'maven-publish'
+    apply plugin: 'idea'
+
+    idea {
+        module {
+            downloadJavadoc = true
+            downloadSources = true
+        }
+    }
 
     repositories {
         maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
         maven { url 'https://oss.sonatype.org/content/repositories/central' }
+        maven { url 'https://repo.papermc.io/repository/maven-public/' }
         mavenCentral()
     }
 
     dependencies {
-        compileOnly 'it.unimi.dsi:fastutil:8.5.12'
-
         compileOnly 'org.jetbrains:annotations:24.1.0'
     }
 
@@ -52,6 +59,8 @@ subprojects {
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT'
+    compileOnly 'it.unimi.dsi:fastutil:8.5.12'
+    compileOnly('com.mojang:datafixerupper:4.1.27') { transitive = false }
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
@@ -68,12 +77,12 @@ def javadocProjects= [
         ':rtag-item'
 ]
 
-task allJavadoc(type: Javadoc) {
+tasks.register('allJavadoc', Javadoc) {
     source javadocProjects.collect { project(it).sourceSets.main.allJava }
     classpath = files(javadocProjects.collect { project(it).sourceSets.main.compileClasspath })
     options {
         links 'https://docs.oracle.com/en/java/javase/11/docs/api/'
         links 'https://hub.spigotmc.org/javadocs/spigot/'
     }
-    destinationDir = file(project.buildDir.path + '/docs/all-javadoc')
+    destinationDir = file(project.layout.buildDirectory.dir('docs/all-javadoc'))
 }
