--- a/rtag-item/build.gradle
+++ b/rtag-item/build.gradle
@@ -5,4 +5,5 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT'
     compileOnly 'com.mojang:authlib:1.5.26' // 3.11.50
+    compileOnly('com.mojang:datafixerupper:4.1.27') { transitive = false }
 }
