Avoid paper remap

--- a/rtag-plugin/build.gradle
+++ b/rtag-plugin/build.gradle
@@ -22,3 +22,9 @@ dependencies {
 }
 
 jar.dependsOn (shadowJar)
+
+shadowJar {
+    manifest {
+        attributes 'Paperweight-Mappings-Namespace': 'mojang'
+    }
+}
