--- a/rtag-plugin/build.gradle
+++ b/rtag-plugin/build.gradle
@@ -21,9 +21,14 @@ dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
 }
 
-jar.dependsOn (shadowJar)
+jar {
+    enabled = false
+    dependsOn (shadowJar)
+}
 
 shadowJar {
+    archiveBaseName.set(rootProject.name)
+    archiveClassifier.set('')
     manifest {
         attributes 'Paperweight-Mappings-Namespace': 'mojang'
     }
