--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ allprojects {
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
         maven { url 'https://oss.sonatype.org/content/repositories/central' }
         maven { url 'https://repo.papermc.io/repository/maven-public/' }
+        maven { url 'https://jitpack.io/' }
         mavenCentral()
     }
 
@@ -59,9 +60,9 @@ subprojects {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.21.5-R0.1-SNAPSHOT'
     compileOnly 'it.unimi.dsi:fastutil:8.5.12'
-    compileOnly('com.mojang:datafixerupper:4.1.27') { transitive = false }
+    compileOnly('com.github.Rubenicos:DataFixerUpper:8.0') { transitive = false }
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
