--- a/rtag-item/build.gradle
+++ b/rtag-item/build.gradle
@@ -1,5 +1,5 @@
 repositories {
-    maven { url 'https://papermc.io/repo/repository/maven-public/' }
+    maven { url = uri('https://papermc.io/repo/repository/maven-public/') }
 }
 
 dependencies {
